WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271255
ScrollViews with snap points should not be candidates for Overlay Regions
https://bugs.webkit.org/show_bug.cgi?id=271255
Summary
ScrollViews with snap points should not be candidates for Overlay Regions
Etienne
Reported
2024-03-19 11:01:10 PDT
ScrollViews with snap points should not be candidates for Overlay Regions
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2024-03-19 11:13:53 PDT
<
rdar://problem/124334848
>
Etienne
Comment 2
2024-03-19 11:14:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26133
EWS
Comment 3
2024-03-19 17:11:42 PDT
Committed
276377@main
(cba69a9ffcad): <
https://commits.webkit.org/276377@main
> Reviewed commits have been landed. Closing PR #26133 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug