ScrollViews with snap points should not be candidates for Overlay Regions https://bugs.webkit.org/show_bug.cgi?id=271255 <rdar://124334848>

Reviewed by Mike Wyrzykowski.

Check for snap offsets info when generating the candidates list for Overlay
Regions.

* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
(WebKit:: const):
Add the check.

* LayoutTests/overlay-region/full-page-overflow-snapping-expected.txt: Added.
* LayoutTests/overlay-region/full-page-overflow-snapping.html: Added.
Add a test with scroll snapping.

Canonical link: https://commits.webkit.org/276377@main